--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<a class="element__item" href="https://www.linkedin.com/in/christianandradesmolina" title=""><img src="img/linkedin.png"></a>
 								<a class="element__item" href="https://github.com/ChristianVJ" title=""><img src="img/github.png"></a>
 								<a class="element__item" href="content/christianandradesmolina_cv.pdf" download="CV" title=""><img src="img/PDF.png"></a>
-								<a class="element__item" href="https://christianvj.github.io/CV/" title=""><img src="web.png"><span>Página web</span></a>
+								<a class="element__item" href="https://christianvj.github.io/CV/" title=""><img src="img/web.png"></a>
 							<!--<div class="bottom-box__element1">
 								<ul>
 									<li class="element1__item"><img src="home.png"><a href="https://goo.gl/maps/Uh53gSW593dLbMXQ8" title=""><span>Algeciras</span></a></li>
