--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<img class="photoContainer__photo" src="img/foto.jpg" alt="footer">
 					</div>
 						<div class="left-box__bottom-box">
-								<a class="element__item" href="mailto:christianadrandesmolina@outlook.es" title=""><img src="img/email.png"></a>
+								<a class="element__item" href="mailto:christianandradesmolina@outlook.es" title=""><img src="img/email.png"></a>
 								<a class="element__item" href="https://www.linkedin.com/in/christianandradesmolina" title=""><img src="img/linkedin.png"></a>
 								<a class="element__item" href="https://github.com/ChristianVJ" title=""><img src="img/github.png"></a>
 								<a class="element__item" href="content/christianandradesmolina_cv.pdf" download="CV" title=""><img src="img/PDF.png"></a>
