--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body> 
 	<div class="main-flexbox">
 		<div class="main-flexbox__left-box"> 
-			<h1 class="left-box__title">CHRISTIAN ANDRADES MOLINA <H5>(Application Management, Associate en Alight Solutions)</H5></h1>
+			<h1 class="left-box__title">CHRISTIAN ANDRADES MOLINA</h1>
 				<div class="left-box__top-box"> 
 					<div class="left-box__top-box__photoContainer">
 						<img class="photoContainer__photo" src="img/foto.jpg" alt="footer">
