--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body> 
 	<div class="main-flexbox">
 		<div class="main-flexbox__left-box"> 
-			<h1 class="left-box__title">CHRISTIAN ANDRADES MOLINA</h1>
+			<h1 class="left-box__title">CHRISTIAN ANDRADES MOLINA</h1> 
 				<div class="left-box__top-box"> 
 					<div class="left-box__top-box__photoContainer">
 						<img class="photoContainer__photo" src="img/foto.jpg" alt="footer">
 					</div>
 						<div class="left-box__bottom-box">
-								<a class="element__item" href="mailto:christianandradesmolina@outlook.es" title=""><img src="img/email.png"></a>
+								<a class="element__item" href="mailto:christianadrandesmolina@outlook.es" title=""><img src="img/email.png"></a>
 								<a class="element__item" href="https://www.linkedin.com/in/christianandradesmolina" title=""><img src="img/linkedin.png"></a>
 								<a class="element__item" href="https://github.com/ChristianVJ" title=""><img src="img/github.png"></a>
 								<a class="element__item" href="content/christianandradesmolina_cv.pdf" download="CV" title=""><img src="img/PDF.png"></a>
@@ -60,7 +60,7 @@
 				<a href="#" class="right-box__titulo"> <img src="img/profesional.png" alt=""> FORMACIÓN PROFESIONAL<span class="toggle-icon"></span></a>
 					<div class="right-box__content">
 						<ul>
-							<li><b>2020-2020. Curso de formación presencial: Magic y metodologías Agile para gestión de proyectos IT: Magic, ERP Bemagic, Power BI y Coaching.</b> <i>Besoftware. 140h.</i></li>
+							<li><b>Curso de formación presencial: Magic y metodologías Agile para gestión de proyectos IT: Magic, ERP Bemagic, Power BI y Coaching.</b> <i>Besoftware. 140h.</i></li>
 						</ul>
 					</div>
 			</div>
