--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 		</div>
 
 		<div class="main-flexbox__right-box">	
+		
+		<div class="right-box__element">
+				<a href="#" class="right-box__titulo"><img src="img/proyectos.png" alt="">EXPERIENCIA PROFESIONAL<span class="toggle-icon"></span></a>
+					<div class="right-box__content">
+						<ul>
+							<li><b>Consultor SAP HCM, Alight Solutions.</b> <br><br/> <i>2021 - actualidad. Granada, Andalucía, España.</i>  <br><br/>Consultor SAP con experiencia en nómina alemana para clientes como TotalEnergies o Hamburg Commercial Ban, encargado de la implementación, configuración y gestión de procesos de nómina, así como resolución de problemas técnicos y funcionales.</li>
+						</ul>
+					</div>
+			</div>
 				
 			<div class="right-box__element">
 				<a href="#" class="right-box__titulo"><img src="img/academica.png" alt="">FORMACIÓN ACADÉMICA<span class="toggle-icon"></span></a>
@@ -89,19 +98,6 @@
 						<li><b>2019: Inglés B1.</b> <i>Certificado por la Universidad de Cambridge. </i></li>
 					</ul>
 				</div>
-			</div>
-			<div class="right-box__element">
-				<a href="#" class="right-box__titulo"><img src="img/proyectos.png" alt="">PRÁCTICAS EN LA CARRERA<span class="toggle-icon"></span></a>
-					<div class="right-box__content">
-						<ul>
-							<li>Desarrollo de una aplicación multimedia que permite gestionar diferentes tipos de medios de forma integral: gráficos, imágenes, sonido y vídeo.</li>
-							<li>Creación de una aplicación web con una documentación completa de requisitos, funcionalidad y descripción de la solución.</li>
-							<li>Desarrollo de un modelo jerárquico articulado dentro de una escena con uso de materiales, fuentes de luz y texturas en OpenGL.</li>
-							<li>Creación de una biblioteca digital mediante Greenstone.</li>
-							<li>Trabajo de fin de grado basado en la aplicación de patrones de diseño al desarrollo de software ágil con una implementación propia de las metodologías ágiles en proyectos SCRUM.</li>
-							<br></br>
-						</ul>
-					</div>
 			</div>
 		</div>
 	</div>
