--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<a href="#" class="right-box__titulo"><img src="img/proyectos.png" alt="">EXPERIENCIA PROFESIONAL<span class="toggle-icon"></span></a>
 					<div class="right-box__content">
 						<ul>
-							<li><b>Consultor SAP HCM, Alight Solutions.</b> <br><br/> <i>2021 - actualidad. Granada, Andalucía, España.</i>  <br><br/>Consultor SAP con experiencia en nómina alemana para clientes como TotalEnergies o Hamburg Commercial Ban, encargado de la implementación, configuración y gestión de procesos de nómina, así como resolución de problemas técnicos y funcionales.</li>
+							<li><b>Consultor SAP HCM, Alight Solutions.</b> <br><br/> <i>2021 - actualidad. Granada, Andalucía, España.</i>  <br><br/>Consultor SAP con experiencia en nómina alemana para clientes como TotalEnergies o Hamburg Commercial Bank, encargado de la implementación, configuración y gestión de procesos de nómina, así como resolución de problemas técnicos y funcionales.</li>
 						</ul>
 					</div>
 			</div>
