--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<a class="element__item" href="mailto:christianadrandesmolina@outlook.es" title=""><img src="img/email.png"></a>
 								<a class="element__item" href="https://www.linkedin.com/in/christianandradesmolina" title=""><img src="img/linkedin.png"></a>
 								<a class="element__item" href="https://github.com/ChristianVJ" title=""><img src="img/github.png"></a>
-								<a class="element__item" href="content/christianandradesmolina_cv.pdf" download="CV" title=""><img src="img/PDF.png"></a>
+								<a class="element__item" href="content/christianandradesmolina_cv.pdf" download="christianandradesmolina_cv" title=""><img src="img/PDF.png"></a>
 							<!--<div class="bottom-box__element1">
 								<ul>
 									<li class="element1__item"><img src="home.png"><a href="https://goo.gl/maps/Uh53gSW593dLbMXQ8" title=""><span>Algeciras</span></a></li>
